// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ButtonCircle click event 1`] = `
<ButtonCircle
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "white",
      "borderColor": "black",
      "color": "black",
    }
  }
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-button-circle buttonCircle normal"
  >
    <div
      className="buttonCircleContainer"
    >
      <Button
        className="normalBorder buttonCircleIcon"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        iconName="bomb"
        iconStyle=""
        id=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        selected={false}
        sizing="normal"
        style={
          Object {
            "backgroundColor": "white",
            "borderColor": "black",
            "color": "black",
          }
        }
        testing={true}
        visible={true}
        width=""
        xcss={null}
      >
        <div
          className="ui-button button ripple normal normalBorder buttonCircleIcon"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "white",
              "borderColor": "black",
              "color": "black",
            }
          }
        >
          <Icon
            className="icon"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            iconName="bomb"
            id=""
            imageFile=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            visible={true}
            width=""
            xcss={null}
          >
            <styled.i
              className="ui-icon fa fa-fw fa-bomb icon"
              sizing="normal"
              style={Object {}}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb icon sc-bdVaJa ifzSmG"
                style={Object {}}
              />
            </styled.i>
          </Icon>
        </div>
      </Button>
    </div>
  </div>
</ButtonCircle>
`;

exports[`Test creation of a ButtonCircle control 1`] = `
<div
  className="ui-button-circle buttonCircle normal test-class"
>
  <div
    className="buttonCircleContainer"
  >
    <Button
      className="normalBorder buttonCircleIcon"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      iconName="bomb"
      iconStyle=""
      id=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "white",
          "borderColor": "black",
          "color": "black",
        }
      }
      testing={true}
      visible={true}
      width=""
      xcss={null}
    />
  </div>
</div>
`;

exports[`Test disabling of a ButtonCircle control 1`] = `
<ButtonCircle
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "white",
      "borderColor": "black",
      "color": "black",
    }
  }
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-button-circle buttonCircle normal disabled nohover"
  >
    <div
      className="buttonCircleContainer"
    >
      <Button
        className="normalBorder buttonCircleIcon"
        contentEditable={false}
        direction="right"
        disabled={true}
        focus={false}
        height=""
        iconName="bomb"
        iconStyle=""
        id=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        selected={false}
        sizing="normal"
        style={
          Object {
            "backgroundColor": "white",
            "borderColor": "black",
            "color": "black",
          }
        }
        testing={true}
        visible={true}
        width=""
        xcss={null}
      >
        <div
          className="ui-button button normal normalBorder buttonCircleIcon disabled nohover"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "white",
              "borderColor": "black",
              "color": "black",
            }
          }
        >
          <Icon
            className="icon"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            iconName="bomb"
            id=""
            imageFile=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            visible={true}
            width=""
            xcss={null}
          >
            <styled.i
              className="ui-icon fa fa-fw fa-bomb icon"
              sizing="normal"
              style={Object {}}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb icon sc-bdVaJa ifzSmG"
                style={Object {}}
              />
            </styled.i>
          </Icon>
        </div>
      </Button>
    </div>
  </div>
</ButtonCircle>
`;

exports[`Test making a ButtonCircle control invisible 1`] = `
<ButtonCircle
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "white",
      "borderColor": "black",
      "color": "black",
    }
  }
  testing={true}
  visible={false}
  width=""
  xcss={null}
>
  <div
    className="ui-button-circle buttonCircle normal invisible"
  >
    <div
      className="buttonCircleContainer"
    >
      <Button
        className="normalBorder buttonCircleIcon"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        iconName="bomb"
        iconStyle=""
        id=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        selected={false}
        sizing="normal"
        style={
          Object {
            "backgroundColor": "white",
            "borderColor": "black",
            "color": "black",
          }
        }
        testing={true}
        visible={false}
        width=""
        xcss={null}
      >
        <div
          className="ui-button button ripple normal normalBorder buttonCircleIcon invisible"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "white",
              "borderColor": "black",
              "color": "black",
            }
          }
        >
          <Icon
            className="icon"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            iconName="bomb"
            id=""
            imageFile=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            visible={true}
            width=""
            xcss={null}
          >
            <styled.i
              className="ui-icon fa fa-fw fa-bomb icon"
              sizing="normal"
              style={Object {}}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb icon sc-bdVaJa ifzSmG"
                style={Object {}}
              />
            </styled.i>
          </Icon>
        </div>
      </Button>
    </div>
  </div>
</ButtonCircle>
`;

exports[`Test retrieval of ButtonCircle props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconStyle": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "white",
    "borderColor": "black",
    "color": "black",
  },
  "testing": true,
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
